# ride_desktop

./: .gitignore  README.md
bass/: Cargo.toml
bass-sys/: Cargo.toml  build.rs
bass-sys/src/: lib.rs
bass/src/: lib.rs
ride/: Cargo.toml
ride/src/: audio.rs  core.rs  interface.rs  main.rs  ride_screen.rs
ride/src/ride_screen/: resources.rs  ride_text.rs  screen.rs  settings.rs  speech.rs
ride/src/ride_screen/screen/keymap/: mod.rs  unix.rs
ride/src/ride_screen/settings/: text_renderer.rs
ride/src/ride_screen/speech/: windows.rs
ride/src/screen/: mod.rs
ride/src/screen/keymap/: windows.rs
ride/src/speech/: mod.rs  unix.rs
