[package]
name = "ride"
license="GPL-3.0-only"
version = "0.1.0"
authors = ["Rastislav Kish <rastislav.kish@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bass={path="../bass"}

clipboard="0.5.0"
derivative="2.2.0"
dialog="0.3.0"
dirs="4.0.0"
lazy_static="1.4.0"

regex="1.8.1"
serde={version="1.0.140", features=["derive"]}
serde_yaml="0.9.14"
speech-dispatcher="0.16.0"

gtk="0.17.1"
gdk="0.17.1"
gio="0.17.9"
glib="0.17.9"

