[package]
name = "ride"
license="GPL-3.0-only"
version = "0.1.0"
authors = ["Rastislav Kish <rastislav.kish@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

bass={path="../bass"}

copypasta="0.8.2"
derivative="2.2.0"
dirs="4.0.0"
lazy_static="1.4.0"

regex="1.9.6"
serde={version="1.0.140", features=["derive"]}
serde_yaml="0.9.14"

gtk="0.18.1"
gdk="0.18.0"
gio="0.18.2"
glib="0.18.2"

[target.'cfg(unix)'.dependencies]

speech-dispatcher="0.16.0"

[target.'cfg(windows)'.dependencies]

tolk="0.5.0"

